refat(project):
GetAll retorna relações de setor e coordenadores
